--- a/src/Pim/Bundle/ImportExportBundle/Resources/views/JobProfile/Tab/history.html.twig
+++ b/src/Pim/Bundle/ImportExportBundle/Resources/views/JobProfile/Tab/history.html.twig
@@ -1,3 +1,3 @@
-<div id="{{ viewElement.alias|replace({' ': '-', '.': '-'})|lower }}" class="tab-pane buffer-top">
+<div id="{{ viewElement.alias|replace({' ': '-', '.': '-'})|lower }}" class="tab-pane buffer-top {{ viewElement.loop.first ? 'active' : '' }}">
     {{ dataGrid.renderHistoryGrid(form.vars.value) }}
 </div>
