--- a/src/Pim/Bundle/ImportExportBundle/Resources/views/JobProfile/Tab/job_content.html.twig
+++ b/src/Pim/Bundle/ImportExportBundle/Resources/views/JobProfile/Tab/job_content.html.twig
@@ -15,9 +15,13 @@
                                     .on('pim_enrich:form:entity:post_update', function () {
                                         document.getElementById('{{ form.parameters.filters.vars.id }}').value = JSON.stringify(form.getFormData());
                                     })
-                                    .trigger('pim_enrich:form:export:set_code', '{{ form.code.vars.value }}')
-                                    .setData(JSON.parse($('#{{ form.parameters.filters.vars.id }}').val()))
-                                    .render();
+                                    .trigger('pim_enrich:form:export:set_code', '{{ form.code.vars.value }}');
+
+                                var formValue = $('#{{ form.parameters.filters.vars.id }}').val();
+
+                                if (!_.isUndefined(formValue)) {
+                                    form.setData(JSON.parse(formValue)).render();
+                                }
 
                                 loadingMask.remove();
                             });
