PIM-5902: fix validation

--- a/src/Pim/Bundle/EnrichBundle/Resources/public/templates/export/product/edit/content/structure/scope.html
+++ b/src/Pim/Bundle/EnrichBundle/Resources/public/templates/export/product/edit/content/structure/scope.html
@@ -10,11 +10,11 @@
     </div>
     <span class="below-input">
         <span class="validation-errors">
-            <% errors.forEach(function (error) { %>
-                <span>
-                    <i class="icon-warning-sign"></i> <span class="error-message"><%- error.message %></span>
-                </span>
-            <% }); %>
+            <% if (error) { %>
+            <span>
+                <i class="icon-warning-sign"></i> <span class="error-message"><%- error %></span>
+            </span>
+            <% } %>
         </span>
     </span>
 </div>
