--- a/src/Pim/Bundle/EnrichBundle/Resources/public/templates/export/product/edit/content/data/validation.html
+++ b/src/Pim/Bundle/EnrichBundle/Resources/public/templates/export/product/edit/content/data/validation.html
@@ -1,9 +1,7 @@
 <span class="validation-container">
     <span class="validation-errors">
         <span>
-            <% errors.forEach(function (error) { %>
-                <i class="icon-warning-sign"></i> <span class="error-message"><%- error.message %></span>
-            <% }); %>
+            <i class="icon-warning-sign"></i> <span class="error-message"><%- error %></span>
         </span>
     </span>
 </span>
