--- a/src/Pim/Bundle/EnrichBundle/Resources/public/templates/filter/product/identifier.html
+++ b/src/Pim/Bundle/EnrichBundle/Resources/public/templates/filter/product/identifier.html
@@ -2,6 +2,4 @@
     class="identifier input-large"
     name="filter-value"
     <%- isEditable ? '' : 'disabled' %>
->
-<%- value %>
-</textarea>
+><%- value %></textarea>
